SCRUM-22 Clear up pom